# hs-simple-check

./: LICENSE  README.md  hs-simple-check.cabal
src/: Check.hs  Main.hs
src/Examples/: Basic.hs
