name:                hs-simple-check
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/miguel-fontes/hs-simple-check#readme
license:             BSD3
license-file:        LICENSE
author:              Miguel Fontes
maintainer:          miguel_m_fontes@hotmail.com
copyright:           MIT
category:            library
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-simple-check
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
